<resources>
    <string name="app_name">Zoomlist</string>
    <string name="action_settings">Configuração</string>
    <string name="value_default">R$0,00</string>
    <string name="count_produtos">Quantos produtos?</string>
    <string name="info_list">Cadê os produtos?</string>
    <string name="name_product">Nome do produto</string>
    <string name="price_product">Preço</string>
    <string name="mais">+</string>
    <string name="menos">-</string>
    <string name="title_activity_product_create">Cadastrar produto</string>
    <string name="total_value">Valor Total:</string>
    <string name="unit_value">Valor Unidade:</string>
    <string name="delete">Deletar lista</string>
    <string name="Ok">Ok</string>
    <string name="Cancelar">Cancelar</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="dialog_delete">Você deseja realmente deletar o item </string>
    <string name="list_delete">Você deseja realmente deletar essa lista de compras?</string>
    <string name="no_products">Nenhum produto no carrinho.</string>
    <string name="plural_product"> produtos no carrinho.</string>
    <string name="singular_products"> produto no carrinho.</string>
    <string name="alimento">Alimento</string>
    <string name="bebida">Bebida</string>
    <string name="limpeza">Limpeza</string>
    <string name="higiene">Higiene</string>
    <string name="porcent_zero">% 0.0</string>
    <string name="zero">0</string>
    <string name="os_alimentos_equivalem_a">Os alimentos equivalem a </string>
    <string name="info_edit_delete">Arraste o item para esquerda ou direita para editar e deletar.</string>
    <string name="as_bebidas_equivalem_a">As bebidas equivalem a </string>
    <string name="os_materiais_de_higiene_equivalem_a">Os materias de higiene pessoal equivalem a </string>
    <string name="os_materiais_de_limpeza_equivalem_a">Os materiais de limpeza equivalem a </string>
    <string name="de_suas_compras"> de suas compras.</string>
    <string name="estimate">Orçamento</string>
    <string name="about">Sobre</string>
    <string name="txt_desenvolvedor">Desenvolvedor</string>
    <string name="txtDefault">------</string>
    <string name="txt_developer">Desenvolvedor</string>
    <string name="txt_version_app">Versão do aplicativo</string>
    <string name="txt_about">Descrição</string>
    <string name="txt_redes_sociais_app">Redes sociais (Aplicativo)</string>
    <string name="txt_contato_developer">Contato (Desenvolvedor)</string>
    <string name="btnFechar">Fechar</string>
    <string name="estimate_alert">Adicione o valor do seu orçamento!</string>
    <string name="editar_produto">Editar produto</string>
    <string name="em_breve">Em breve =D</string>
    <string name="cadastrar_produto">Cadastrar produto</string>
    <string name="personal_name">Marcos Vinithius Melo Filho</string>
    <string name="personal_email">marcos.vinithius@gmail.com</string>
    <string name="subject_email">Calcula Feira App - Contato usuário</string>
    <string name="personal_uri_linkedin">https://www.linkedin.com/in/marcos-vinithius-melo-filho-8a0a844b/</string>
    <string name="app_uri_facebook">fb://page/331549607350902</string>
    <string name="url_uri_facebook">https://www.facebook.com/Zoomlist-331549607350902/</string>
    <string name="about_text_app">O aplicativo Zoomlist foi desenvolvido com a intenção de facilitar a vida de quem vai muito ao supermercado e não consegue administrar as suas compras, esqueça de vez o papel e a caneta e use uma ferramenta inteligente para te deixar tranquilo respeitando sempre o seu orçamento e te trazendo todo o feedback possível.</string>
    <string name="txtCheckBoxEstimate">Exibir orçamento</string>
    <string name="txtCheckBoxQuantity">Exibir quantidade de produtos</string>
    <string name="txtCheckBoxPorcent">Exibir porcentagem de categorias</string>
    <string name="txtTitleCheckBoxInicial">Configuração de tela inicial</string>
</resources>
