<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.calculafeira.calculafeira.Activity.ConfigActivity"
    tools:showIn="@layout/activity_config">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_account_balance_wallet" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_price_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_estimate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/estimate"
                        android:inputType="numberDecimal" />

                </android.support.design.widget.TextInputLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTitleCheckBoxInicial"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/colorBlack"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <CheckBox
                    android:id="@+id/checkBoxEstimate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCheckBoxEstimate" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <CheckBox
                    android:id="@+id/checkBoxQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCheckBoxQuantity" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <CheckBox
                    android:id="@+id/checkBoxPorcent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtCheckBoxPorcent" />

            </TableRow>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
