<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_version_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txt_version_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_version_app_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txtDefault"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <TextView
                android:id="@+id/txt_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txt_developer"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_developer_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txtDefault"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txt_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txt_contact"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_contact_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txtDefault"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txt_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txt_about"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_about_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txtDefault"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txt_redes_sociais_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txt_redes_sociais_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_redes_sociais_app_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txtDefault"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txt_redes_sociais_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txt_redes_sociais_developer"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_redes_sociais_developer_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txtDefault"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnFechar"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:shadowColor="#000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="4"
        android:text="@string/btnFechar"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>