<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_version_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txt_version_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_version_app_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txtDefault"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txt_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txt_about"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_about_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txtDefault"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txt_contato_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txt_contato_developer"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/btn_gmail_pessoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_margin="10sp"
                    android:shadowColor="#000"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="4"
                    app:srcCompat="@drawable/ic_gmail" />

                <ImageButton
                    android:id="@+id/btn_linkedin_pessoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_margin="10sp"
                    android:shadowColor="#000"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="4"
                    app:srcCompat="@drawable/ic_linkedin" />

            </TableRow>

            <TextView
                android:id="@+id/txt_redes_sociais_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10sp"
                android:text="@string/txt_redes_sociais_app"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/btn_facebook_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_margin="10sp"
                    android:shadowColor="#000"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="4"
                    app:srcCompat="@drawable/ic_facebook" />

                <ImageButton
                    android:id="@+id/btn_instagran_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_margin="10sp"
                    android:shadowColor="#000"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="4"
                    app:srcCompat="@drawable/ic_instagran" />

                <ImageButton
                    android:id="@+id/btn_youtube_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:layout_margin="10sp"
                    android:shadowColor="#000"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="4"
                    app:srcCompat="@drawable/ic_youtube" />

            </TableRow>

        </LinearLayout>
    </ScrollView>
</LinearLayout>