<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:longClickable="true"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_icon_category"
                android:layout_width="1dp"
                android:layout_height="44dp"
                android:layout_weight="0.2"
                android:layout_marginLeft="2dp"
                app:srcCompat="@drawable/ico_alimento" />

            <TextView
                android:id="@+id/textView_name_product_adapter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="Name product"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_total_price_titler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5sp"
                android:text="@string/total_value"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView_unit_price_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/unit_value"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_total_price_product_adapter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5sp"
                android:text="Total price"
                android:textColor="@color/colorRed"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_unit_price_product_adapter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="Unit price"
                android:textColor="@color/colorGreen"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical">

        <Button
            android:id="@+id/button_menos"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:text="@string/menos" />

        <TextView
            android:id="@+id/textView_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_mais"
            android:layout_width="50sp"
            android:layout_height="match_parent"
            android:text="@string/mais" />

    </TableRow>

    </TableRow>

</LinearLayout>